src/ir/snapshots/lumina2__ir__ir_macro__test__locals.snap
---
source: src/ir/ir_macro.rs
expression: "ir! { let _0: u8; let _1: u8; let _2: u8; bb0: { return; } }"
---
Body {
    ctx: Ctx {
        tys: IndexedVec(
            [
                U8,
            ],
            PhantomData<fn() -> lumina2::ir::ctx::ty::Ty>,
        ),
    },
    basic_blocks: IndexedVec(
        [
            BasicBlockData {
                statements: [],
                terminator: Return,
            },
        ],
        PhantomData<fn() -> lumina2::ir::BasicBlock>,
    ),
    local_decls: IndexedVec(
        [
            LocalDecl {
                ty: Ty(
                    Key(
                        0,
                    ),
                ),
            },
            LocalDecl {
                ty: Ty(
                    Key(
                        0,
                    ),
                ),
            },
            LocalDecl {
                ty: Ty(
                    Key(
                        0,
                    ),
                ),
            },
        ],
        PhantomData<fn() -> lumina2::ir::Local>,
    ),
    arg_count: 0,
}
